tests/ui/sharded_non_clone_shard_hasher.stderr
error[E0277]: the trait bound `NonCloneHasher: Clone` is not satisfied
  --> tests/ui/sharded_non_clone_shard_hasher.rs:10:27
   |
10 | impl ShardHasher<u64> for NonCloneHasher {
   |                           ^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `NonCloneHasher`
   |
note: required by a bound in `ShardHasher`
  --> src/stores/sharded/mod.rs
   |
   | pub trait ShardHasher<K>: Clone + Send + Sync + 'static {
   |                           ^^^^^ required by this bound in `ShardHasher`
help: consider annotating `NonCloneHasher` with `#[derive(Clone)]`
   |
 8 + #[derive(Clone)]
 9 | struct NonCloneHasher;
   |
